Fixed prize section overflow, changed background color and made the prize section responsive

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   color: white;
   background-color: #282c34;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .App-logo {
@@ -166,27 +167,27 @@
   margin-right: 10vw;
 }
 
+/* Prize Section */
+
 .Prizes{
   height:auto;
   background-color: #282c34;
   display: flex;
   flex-flow: wrap;
   font-family: 'Space Mono', monospace;
-  margin-bottom: 10em;
+  margin-bottom: 5em;
 }
+
 .Prizes-Top-Description{
-  display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
 }
 .Prizes-Title{
-  
   align-items: center;
   font-size: xx-large;
   padding-top: 5vh;
   padding-bottom: 5vh;
- 
 }
 
 .Prizes-Description{
@@ -202,50 +203,29 @@
   display: flex;
   padding-top: 5vh;
   flex-direction: row;
-  flex-wrap: no-wrap;
+  align-items: center;
+  justify-content: center;
 }
 .Left-Title{
   font-size: xx-large;
   font-weight: 100;
-  text-align: left;
-  padding-left: 2.5vw;
   color:gold;
 }
 
 .Prizes-Prizes-left, .Prizes-Name-left{
-  display: flex;
   font-size: large;
   font-weight: 100;
   text-align: left;
   padding-left: 5vh;
   padding-right: 5vh;
 }
-.Left-Div{
-  width:calc(50% - 24px);
-}
-.Right-Div{
-  width:calc(50% - 24px);
-  text-align: right;
-  padding-left: 25%;
-  
-}
-.First-Place>* , .Second-Place>* , .Third-Place>*{
-  display: absolute;
-}
-.Image-One , .Image-Three{
-  margin-right: 2vw;
-}
-.Image-Two{
-  padding-top: 5vh;
-  
-}
-.image-one ,.image-three{
-  height: 25em;
-  padding-left: 20vw;
-}
+
+
 .image-two{
-  height: 30em;
+  height: 500px;
+  width: 500px;
 }
+
 .Prizes-Name-left{
 
   color: lightblue;
@@ -256,23 +236,36 @@
   font-family: 'Space Mono', monospace;
   font-weight: 100;
   font-size: xx-large;
-  text-align: right;
   color:gold;
-  width: 40vw;
-  padding-left: 10vw;
 }
 
 .Prizes-Prizes-right , .Prizes-Name-right{
   font-size: large;
   font-weight: 100;
-  width: 40vw;
-  padding-left: 10vw;
+  text-align: left;
   font-family: 'Space Mono', monospace;
 }
 
 .Prizes-Name-right{
   color: lightblue;
 }
+
+.First-Place , .Second-Place , .Third-Place{
+  padding: min(20vh, 7em) 1em;  
+}
+
+.First-Place{
+  background: linear-gradient(to bottom, #282c34, #110639);
+}
+.Third-Place{
+  background: linear-gradient(to bottom,#110639, #282c34);
+}
+.Second-Place{
+  background-color: #110639;
+}
+/* End of prize section */
+
+
 @media (max-width: 1250px) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -312,30 +305,48 @@
     position: initial;
   }
 
-  .Prizes , .Prizes-Prizes-left, .Prizes-Name-left, .Prizes-Name-right, .Prizes-Prizes-right, .Left-Div, .Right-Div, .Right-Title{
-    display: flex;
+  /* Prize section mobile */
+
+  .First-Place , .Second-Place , .Third-Place{
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0;
+  }
+
+  .Right-Div h3, .Left-Div h3{
     text-align: center;
-    width: fit-content;
   }
-  .Right-Title{
-    padding-left: 2.5vw;
+
+  .image-one{
+    height: 300px;
+    width: 300px;
   }
-  .Image-One, .image-one, .Image-Three, .image-three{
-    padding-left: 10vw;
+  .image-two{
+    height: 300px;
+    width: 300px;
   }
-  .Image-Two , .image-two{
-    padding-left: 15vw;
+
+  .image-three{
+    height: 200px;
+    width: 350px;
   }
+
+  .image-one, .image-two, .image-three{
+    padding-block: 2em;
+  }
+
+  /* End of prize section mobile */
+
 }
 
 /* Sponsor Section */
 .sponsorSection{
   font-family: 'Space Mono', monospace;
-  background-color: rgba(0, 0, 0, 0.2);
+  background: linear-gradient(to bottom, #282c34, #110639);
   height: 50vh;
   display: flex;
-  padding-bottom:15em;
+  padding-block:10em;
   justify-content: center; 
 }
 
